correct z-index of top class and add top to flash

--- a/app/styles/app/modules/flash.scss
+++ b/app/styles/app/modules/flash.scss
@@ -22,7 +22,7 @@
     @media #{$small-only} {
       height: $top-height-mobile;
     }
-    top: -1px;
+    top: 71px;
 
     &.fixed {
       position: fixed;
